# dtest

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: github-pages-mkdocs.yml  release.yml  test.yml
src/dtest/: utils.py
src/dtest/pandas/: compare.py
