[project]
name = "dtest"
version = "0.1.0"
description = "python testing utilities"
authors = [
    {name = "Mostafa Farrag",email = "mostafa.farrag@deltares.nl"}
]
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "pytest-asyncio>=1.2.0",
    "nest-asyncio>=1.6.0",
    "nbval>=0.11.0",
    "pytest-xdist>=3.8.0",
    "mypy>=1.19.0",
    "types-PyYAML>=6.0.12",
]

docs = [
    "deltares-hms-docs",
    "mkdocs >=1.5.3",
    "mkdocs-material >=9.5.3",
    "mkdocstrings >=0.24.0",
    "mkdocstrings-python >=1.7.5",
    "mike >=2.1.3",
    "mkdocs-jupyter >=0.25.1",
    "mkdocs-autorefs  >=1.2",
    "mkdocs-macros-plugin  >=1.3.7",
    "mkdocs-table-reader-plugin  >=3.1.0",
    "mkdocs-mermaid2-plugin  >=1.2.1",
    "jupyter-contrib-nbextensions  >=0.7.0",
    "mkdocs-panzoom-plugin",
    "notebook<7.0",
    "jupyter",
    "commitizen (>=4.8.3,<5.0.0)",
]


[project.urls]
"Homepage" = "https://github.com/Deltares-research/dtest"
"Bug Tracker" = "https://github.com/Deltares-research/dtest/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dtest"]


[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "$version"
version_files = [
    "pyproject.toml:version",
]
changelog_file = "docs/change-log.md"

[tool.flake8]
ignore = [""]
max-line-length = 120
count = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = "docs"
markers = [
    "unit: Pure unit tests (fast, isolated, no I/O)(deselect with '-m \"not unit\"')",
    "integration: Tests involving multiple components or lightweight I/O (deselect with '-m \"not integration\"')",
    "e2e: End-to-end tests (CLI, full workflows)(deselect with '-m \"not e2e\"')",
    "slow: Tests that take >1s (deselect with '-m \"not slow\"')",
    "benchmark: Performance benchmarks (deselect with '-m \"not benchmark\"')",
    "property: Hypothesis property-based tests (deselect with '-m \"not property\"')",
    "regression: Regression tests with golden files (deselect with '-m \"not regression\"')",
    "golden: Tests using golden/snapshot files (deselect with '-m \"not golden\"')",
    "mock: marks tests as mock (deselect with '-m \"not mock\"')",
    "long: marks tests as long (deselect with '-m \"not long\"')",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "setup"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tsvkw.toetsmodel.models"
# Complex parsing logic with dynamic types
warn_return_any = false
disallow_any_expr = false

[[tool.mypy.overrides]]
module = "tsvkw.config"
# Configuration loading from YAML - unavoidable Any returns
warn_return_any = false

[tool.uv.sources]
deltares-hms-docs = { git = "https://github.com/Deltares-research/doc_utils.git", branch = "latex-templates" }

#[tool.uv]
#managed = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
